# sensor-monitor

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: ci-code-approval.yml
cmd/monitor/: BUILD.bazel  common.go  cpu.go  cpu_test.go  main.go  main_test.go  notify.go
cmd/service/: BUILD.bazel  main.go
magefiles/: alias.go  dep.go  generate.go  init_and_config.go  linting.go  test.go
pkg/alerts/: BUILD.bazel  alert.go  alerter.go  notify.go
pkg/alerts/mock/: BUILD.bazel  mock.gen.go
pkg/sensors/: BUILD.bazel  cpu.go
pkg/utils/: BUILD.bazel  naming.go  naming_test.go
tools/bazel/extra/: BUILD.bazel  main.go
tools/bazel/mock/: BUILD.bazel
