load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "monitor_lib",
    srcs = [
        "common.go",
        "main.go",
    ],
    importpath = "github.com/jacobbrewer1/sensor-monitor/cmd/monitor",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gen2brain_beeep//:beeep"],
)

go_binary(
    name = "monitor",
    embed = [":monitor_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "monitor_test",
    srcs = ["main_test.go"],
    embed = [":monitor_lib"],
    deps = ["@com_github_stretchr_testify//require"],
)
