load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_lib",
    srcs = [
        "common.go",
        "main.go",
    ],
    importpath = "github.com/jacobbrewer1/sensor-monitor/cmd/service",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gen2brain_beeep//:beeep"],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)
